# class-008

./: .gitignore  README.md  etl.py  log.py  log_example_00.py  logging_example.py  pipeline.py  pyproject.toml  singleton.py  timer.py
data/: sales_001.json  sales_002.json  sales_003.json
